Closed Bug 66647 Opened 25 years ago Closed 24 years ago

An option should be provided to stop sending mail

Categories

(SeaMonkey :: MailNews: Message Display, defect, P1)

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: venur, Assigned: bugzilla)

References

Details

Attachments

(2 files)

From Bugzilla Helper: User-Agent: Mozilla/4.73 [en] (WinNT; I) BuildID: 2001012404 If the user has selected to send a huge mail with attachments, and has started to send. In between if he realises that it might take quite some time and wanted to stop sending, there is no option available for this in the current build. Stop button on the tool bar is disabled while sending the message. Reproducible: Always
Status: UNCONFIRMED → NEW
Ever confirmed: true
QA Contact: esther → sheelar
To answer the question in that document, I think we do need a Stop button in mail compose, and it should stop whatever it's doing. Of course, if the SMTP phase is already done, we can't undo that. Nominating for 0.9.2.
Keywords: mozilla0.9.2
*** Bug 83292 has been marked as a duplicate of this bug. ***
*** Bug 87442 has been marked as a duplicate of this bug. ***
*** Bug 88786 has been marked as a duplicate of this bug. ***
Adding folks to CC list, adding nsenterprise+ keyword. Changing platform All, OS All, severity Major (according to enterprise feedback this is on the "most wanted" list.)
Severity: normal → major
Keywords: nsenterprise+
OS: Windows NT → All
Hardware: PC → All
*** Bug 90726 has been marked as a duplicate of this bug. ***
*** Bug 91015 has been marked as a duplicate of this bug. ***
moving to mozilla0.9.4 and reassigning to ducarroz
Assignee: sspitzer → ducarroz
Priority: -- → P1
Target Milestone: --- → mozilla0.9.4
*** Bug 93645 has been marked as a duplicate of this bug. ***
Status: NEW → ASSIGNED
Whiteboard: Have fix
Attached patch Propose fix, v1Splinter Review
Whiteboard: Have fix → Have fix, need r & sr
*** Bug 93646 has been marked as a duplicate of this bug. ***
R=ducarroz, varada
Whiteboard: Have fix, need r & sr → Have fix, sr
Whiteboard: Have fix, sr → Have fix, need sr
Whiteboard: Have fix, need sr → Have fix, ready to be checked in
Fixed and checked in. Thanks mscott for fixing the protocol part.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: Have fix, ready to be checked in
verified, Sending mail can be cancelled from the cancel button on the send progress window which has been added. 2001-08-13-06 win98 2001-08-13-04 mac 2001-08-13-06 linux
Status: RESOLVED → VERIFIED
*** Bug 98093 has been marked as a duplicate of this bug. ***
No more Cancel option in 2001111608... what happens?
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: