Fix for bug 66647. Add a way to cancel a smtp process. mscott wrote the protocole part of this fix. R=ducarroz, R=varada, SR=ssptizer